# ps5

./: .gitignore  ISSUES.md  PRD.md  README.md  config.yaml  consensus_engine.py  info.txt  main.py  progress.md  pyproject.toml  run.md  run.sh
dashboard/: index.html  package-lock.json  package.json
dashboard/public/: analysis.json
dashboard/src/: App.jsx  index.css  store.js
dashboard/src/components/: NetworkGraph.jsx  ProposalChart.jsx  RepScoreboard.jsx  StatsBreakdown.jsx
data/: objections.json  proposals.json  relations.csv
data/raw/: representatives.json
output/: final_agreement.json
plans/: implementation.md
src/: __init__.py  alliance_detector.py  cleaner.py  consensus_builder.py  data_loader.py  feature_engineer.py
tests/: __init__.py  test_alliance_detector.py  test_cleaner.py  test_consensus_builder.py  test_data_loader.py  test_feature_engineer.py  test_hidden_scenarios.py  test_integration.py
